fix: 3-subscribe.sh script
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/antora.yml
+++ b/antora.yml
@@ -68,6 +68,7 @@ asciidoc:
     prod-checluster: eclipse-che
     prod-cli: chectl
     prod-deployment: che
+    prod-subscription: eclipse-che
     prod-docs-url: https://www.eclipse.org/che/docs
     prod-docs-url-backup-recovery: link:https://www.eclipse.org/che/docs/che-7/administration-guide/backup-and-recovery/[Backup and recovery]
     prod-docs-url-enable-oauth: link:https://www.eclipse.org/che/docs/che-7/administration-guide/configuring-openshift-oauth/[Configuring OpenShift OAuth]
