fix: Adapt migration to the new product id
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/antora.yml
+++ b/antora.yml
@@ -68,7 +68,6 @@ asciidoc:
     prod-checluster: eclipse-che
     prod-cli: chectl
     prod-deployment: che
-    prod-subscription: eclipse-che
     prod-docs-url: https://www.eclipse.org/che/docs
     prod-docs-url-backup-recovery: link:https://www.eclipse.org/che/docs/che-7/administration-guide/backup-and-recovery/[Backup and recovery]
     prod-docs-url-enable-oauth: link:https://www.eclipse.org/che/docs/che-7/administration-guide/configuring-openshift-oauth/[Configuring OpenShift OAuth]
@@ -96,3 +95,8 @@ asciidoc:
     project-context: che
     repo-path: ""
     theia-endpoint-image: eclipse/che-theia-endpoint-runtime:next
+    prod-migration-short-id: che
+    prod-migration-deployment-name: che
+    prod-migration-operator: che-operator
+    prod-migration-checluster: eclipse-che
+    prod-migration-subscription: eclipse-che
