--- a/antora.yml
+++ b/antora.yml
@@ -95,7 +95,7 @@ asciidoc:
     project-context: che
     repo-path: ""
     theia-endpoint-image: eclipse/che-theia-endpoint-runtime:next
-    prod-migration-short-id: che
+    prod-migration-id-short: che
     prod-migration-deployment: che
     prod-migration-operator: che-operator
     prod-migration-checluster: eclipse-che
