--- a/antora.yml
+++ b/antora.yml
@@ -95,8 +95,8 @@ asciidoc:
     project-context: che
     repo-path: ""
     theia-endpoint-image: eclipse/che-theia-endpoint-runtime:next
-    prod-migration-id-short: che
-    prod-migration-deployment: che
-    prod-migration-operator: che-operator
-    prod-migration-checluster: eclipse-che
-    prod-migration-subscription: eclipse-che
+    pre-migration-prod-id-short: che
+    pre-migration-prod-deployment: che
+    pre-migration-prod-operator: che-operator
+    pre-migration-prod-checluster: eclipse-che
+    pre-migration-prod-subscription: eclipse-che
