docs: update PostgreSQL info to use relevant images
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/antora.yml
+++ b/antora.yml
@@ -64,7 +64,7 @@ asciidoc:
     platforms-ingress: Kubernetes Ingress or OpenShift Route
     platforms-name: Kubernetes or OpenShift
     platforms-namespace: Kubernetes namespace or OpenShift project
-    postgresql-image-url: quay.io/eclipse/che-postgres
+    postgresql-image-url: quay.io/eclipse/che--centos--postgresql-96-centos13
     prod-checluster: eclipse-che
     prod-cli: chectl
     prod-deployment: che
