--- a/antora.yml
+++ b/antora.yml
@@ -21,6 +21,8 @@ asciidoc:
     # for the project
     broker-ver: "v3.4.0"
     che-plugin-registry-directory: che-plugin-registry
+    devworkspace-operator-index: registry.redhat.io/redhat/redhat-operator-index:v4.10
+    devworkspace-operator-version-patch: "0.14.1"
     devworkspace: DevWorkspace
     hosted-che-docs: xref:hosted-che:hosted-che.adoc[]
     identity-provider-docs-url: https://www.keycloak.org/docs/
@@ -44,15 +46,15 @@ asciidoc:
     image-puller-repository-name: kubernetes-image-puller
     kube-ver-min: "1.21"
     kubernetes: Kubernetes
-    link-oauth2-proxy: link:https://github.com/oauth2-proxy/oauth2-proxy[OAuth2 Proxy]
-    link-kube-rbac-proxy: link:https://github.com/brancz/kube-rbac-proxy[kube-rbac-proxy]
-    link-understanding-custom-resources: "link:https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/[Kubernetes - Understanding Custom Resources]"
     link-installing-orch-cli: "link:https://kubernetes.io/docs/tasks/tools/#kubectl[Kubernetes - Install Tools: kubectl]"
+    link-kube-rbac-proxy: link:https://github.com/brancz/kube-rbac-proxy[kube-rbac-proxy]
     link-manage-compute-resources-container: "link:https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/[{kubernetes} - Resource management for pods and containers]"
+    link-oauth2-proxy: link:https://github.com/oauth2-proxy/oauth2-proxy[OAuth2 Proxy]
     link-prod-cli-documentation: "link:https://github.com/che-incubator/chectl/[`chectl` reference documentation]"
+    link-understanding-custom-resources: "link:https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/[Kubernetes - Understanding Custom Resources]"
     namespace: namespace # In context: API namespace
     ocp: OpenShift&#160;Container&#160;Platform
-    ocp4-ver: "4.6"
+    ocp4-ver: "4.10"
     orch-cli-link: link:https://kubernetes.io/docs/reference/kubectl/overview/[Overview of kubectl]
     orch-cli: kubectl
     orch-ingress: Kubernetes Ingress
@@ -65,12 +67,17 @@ asciidoc:
     platforms-name: Kubernetes or OpenShift
     platforms-namespace: Kubernetes namespace or OpenShift project
     postgresql-image-url: quay.io/eclipse/che--centos--postgresql-96-centos13
+    pre-migration-prod-checluster: eclipse-che
+    pre-migration-prod-deployment: che
+    pre-migration-prod-id-short: che
+    pre-migration-prod-operator: che-operator
+    pre-migration-prod-subscription: eclipse-che
     prod-checluster: eclipse-che
     prod-cli: chectl
     prod-deployment: che
-    prod-docs-url: https://www.eclipse.org/che/docs
     prod-docs-url-backup-recovery: link:https://www.eclipse.org/che/docs/che-7/administration-guide/backup-and-recovery/[Backup and recovery]
     prod-docs-url-enable-oauth: link:https://www.eclipse.org/che/docs/che-7/administration-guide/configuring-openshift-oauth/[Configuring OpenShift OAuth]
+    prod-docs-url: https://www.eclipse.org/che/docs
     prod-home: /home/user
     prod-host: che-host
     prod-id-short: che
@@ -78,25 +85,22 @@ asciidoc:
     prod-last-version-pre-dwo: v7.41
     prod-namespace: eclipse-che
     prod-operator-image-name: che-operator
+    prod-operator-index: registry.access.redhat.com/redhat/community-operator-index:v4.10
+    prod-operator-package-name: eclipse-che
     prod-operator: che-operator
     prod-prev-ver: "previous minor version"
     prod-short: Che
-    prod-stable-channel: stable
     prod-stable-channel-catalog-source: community-operators
     prod-stable-channel-package: eclipse-che
+    prod-stable-channel: stable
     prod-upstream: Eclipse{nbsp}Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
-    prod-ver-patch: main
-    prod-ver: main
+    prod-ver-patch: "7.47.0"
+    prod-ver: "7.47"
     prod-workspace: che-ws
     prod: Eclipse&#160;Che
     prod2: Eclipse&#160;Che
     project-context: che
     repo-path: ""
     theia-endpoint-image: eclipse/che-theia-endpoint-runtime:next
-    pre-migration-prod-id-short: che
-    pre-migration-prod-deployment: che
-    pre-migration-prod-operator: che-operator
-    pre-migration-prod-checluster: eclipse-che
-    pre-migration-prod-subscription: eclipse-che
