--- a/antora.yml
+++ b/antora.yml
@@ -1,8 +1,8 @@
 ---
 name: docs
 title: Documentation
-version: next
-prerelease: true
+version: stable
+prerelease: false
 start_page: overview:introduction-to-eclipse-che.adoc
 nav:
   - modules/overview/nav.adoc
@@ -98,8 +98,8 @@ asciidoc:
     prod-upstream: Eclipse{nbsp}Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
-    prod-ver-patch: "7.47.0"
-    prod-ver: "7.47"
+    prod-ver-patch: "7.46.0"
+    prod-ver: "7.46"
     prod-workspace: che-ws
     prod: Eclipse&#160;Che
     prod2: Eclipse&#160;Che
