--- a/antora.yml
+++ b/antora.yml
@@ -19,17 +19,12 @@ asciidoc:
     favicon: favicon.png
     icons: font
     # for the project
-    broker-ver: "v3.4.0"
     che-plugin-registry-directory: che-plugin-registry
     devworkspace-operator-index: registry.redhat.io/redhat/redhat-operator-index:v4.10
     devworkspace-operator-version-patch: "0.14.1"
-    devworkspace: DevWorkspace
+    devworkspace: Dev Workspace
     hosted-che-docs: xref:hosted-che:hosted-che.adoc[]
-    identity-provider-docs-url: https://www.keycloak.org/docs/
     identity-provider-id: keycloak
-    identity-provider-image-url: quay.io/eclipse/che-keycloak
-    identity-provider-url: https://www.keycloak.org/
-    identity-provider-version: "15.0"
     identity-provider: Keycloak
     image-puller-cr-name: KubernetesImagePuller
     image-puller-deployment-id: kubernetes-image-puller-operator
@@ -62,7 +57,6 @@ asciidoc:
     orch-namespace: namespace # In context: orch-name orch-namespace
     osd: OpenShift&#160;Dedicated
     platforms-cli: "`kubectl` or `oc`"
-    platforms-identity-provider: "Identity Provider (Keycloak or RH-SSO)"
     platforms-ingress: Kubernetes Ingress or OpenShift Route
     platforms-name: Kubernetes or OpenShift
     platforms-namespace: Kubernetes namespace or OpenShift project
@@ -77,7 +71,6 @@ asciidoc:
     prod-deployment: che
     prod-docs-url-backup-recovery: link:https://www.eclipse.org/che/docs/che-7/administration-guide/backup-and-recovery/[Backup and recovery]
     prod-docs-url-enable-oauth: link:https://www.eclipse.org/che/docs/che-7/administration-guide/configuring-openshift-oauth/[Configuring OpenShift OAuth]
-    prod-docs-url: https://www.eclipse.org/che/docs
     prod-home: /home/user
     prod-host: che-host
     prod-id-short: che
@@ -88,6 +81,7 @@ asciidoc:
     prod-operator-index: registry.access.redhat.com/redhat/community-operator-index:v4.10
     prod-operator-package-name: eclipse-che
     prod-operator: che-operator
+    prod-prev-short: Che
     prod-prev-ver: "previous minor version"
     prod-short: Che
     prod-stable-channel-catalog-source: community-operators
