CRC and CRW renaming - implementing feedback

--- a/antora.yml
+++ b/antora.yml
@@ -98,4 +98,5 @@ asciidoc:
     prod2: Eclipse&#160;Che
     project-context: che
     repo-path: ""
+    rh-os-devspaces: Red Hat OpenShift Dev Spaces
     theia-endpoint-image: eclipse/che-theia-endpoint-runtime:next
