--- a/antora.yml
+++ b/antora.yml
@@ -98,6 +98,6 @@ asciidoc:
     prod2: Eclipse&#160;Che
     project-context: che
     repo-path: ""
-    rh-os-devfiles: Red Hat OpenShift Dev Spaces
+    rh-os-devspaces: Red Hat OpenShift Dev Spaces
     rh-os-local: Red Hat OpenShift Local
     theia-endpoint-image: eclipse/che-theia-endpoint-runtime:next
