--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,7 @@ vendor
 # Antora
 .cache
 node_modules/
-build/site
-build/site.zip
-build/site-unbranded
+build/
 
 linkchecker-out.html
 .ash_history
