--- a/antora.yml
+++ b/antora.yml
@@ -1,8 +1,7 @@
 ---
 name: docs
 title: Documentation
-version: next
-prerelease: true
+version: stable
 start_page: overview:introduction-to-eclipse-che.adoc
 nav:
   - modules/overview/nav.adoc
@@ -95,8 +94,8 @@ asciidoc:
     prod-upstream: Eclipse{nbsp}Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
-    prod-ver-patch: "7.47.0"
-    prod-ver: "7.47"
+    prod-ver-patch: "7.48.0"
+    prod-ver: "7.48"
     prod-workspace: che-ws
     prod: Eclipse&#160;Che
     prod2: Eclipse&#160;Che
