fix: attributes around pupgrading from prev to next version

--- a/antora.yml
+++ b/antora.yml
@@ -83,6 +83,7 @@ asciidoc:
     prod-operator-package-name: eclipse-che
     prod-operator: che-operator
     prod-prev-short: Che
+    prod-prev-id-short: che
     prod-prev-ver: "previous minor version"
     prod-short: Che
     prod-stable-channel-catalog-source: community-operators
