feat: Add rollback script for migration guide
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/antora.yml
+++ b/antora.yml
@@ -67,6 +67,9 @@ asciidoc:
     pre-migration-prod-id-short: che
     pre-migration-prod-operator: che-operator
     pre-migration-prod-subscription: eclipse-che
+    pre-migration-prod-package: eclipse-che
+    pre-migration-prod-channel: stable
+    pre-migration-prod-catalog-source: community-operators
     prod-checluster: eclipse-che
     prod-cli: chectl
     prod-deployment: che
