fix: installing in restricted environment

--- a/antora.yml
+++ b/antora.yml
@@ -81,6 +81,7 @@ asciidoc:
     prod-id: eclipse-che
     prod-last-version-pre-dwo: v7.41
     prod-namespace: eclipse-che
+    prod-operator-bundle-name: eclipse-che
     prod-operator-image-name: che-operator
     prod-operator-index: registry.access.redhat.com/redhat/community-operator-index:v4.10
     prod-operator-package-name: eclipse-che
