--- a/devfile.yaml
+++ b/devfile.yaml
@@ -15,19 +15,17 @@ components:
       - "-f"
       - /dev/null
     endpoints:
-      - name: Open-Livereload
+      - name: open-livereload
         port: 35729
-      - name: Open-Preview-server
+      - name: open-preview-server
         port: 4000
         attributes:
-          path: /docs/next/overview/introduction-to-eclipse-che/
+          path: /
   - type: chePlugin
     reference: https://che-plugin-registry-main.surge.sh/v3/plugins/errata-ai/vale-server/latest/meta.yaml
     alias: vale-vscode
     preferences:
       vale.core.useCLI: true
-  - id: ms-vscode/vscode-github-pullrequest/latest
-    type: chePlugin
   - type: chePlugin
     reference: https://che-plugin-registry-main.surge.sh/v3/plugins/joaompinto/asciidoctor-vscode/latest/meta.yaml
     alias: asciidoctor-vscode
@@ -35,29 +33,21 @@ components:
     reference: https://che-plugin-registry-main.surge.sh/v3/plugins/timonwong/shellcheck/latest/meta.yaml
     alias: shellcheck
   - type: chePlugin
-    id: redhat/vscode-yaml/latest
+    id: golang/go/latest
   - type: chePlugin
-    id: redhat/vscode-xml/latest
+    id: ms-python/python/latest
   - type: chePlugin
-    id: vscode/typescript-language-features/latest
+    id: ms-vscode/vscode-github-pullrequest/latest
   - type: chePlugin
     id: redhat/java/latest
   - type: chePlugin
-    id: golang/go/latest
+    id: redhat/vscode-xml/latest
+  - type: chePlugin
+    id: redhat/vscode-yaml/latest
+  - type: chePlugin
+    id: vscode/typescript-language-features/latest
 
 commands:
-  - name: Generate reference tables for environment variables
-    actions:
-      - type: exec
-        component: che-docs
-        workdir: /projects/che-docs
-        command: bash tools/environment_docs_gen.sh
-  - name: Generate reference tables for CheCluster
-    actions:
-      - type: exec
-        component: che-docs
-        workdir: /projects/che-docs
-        command: bash tools/checluster_docs_gen.sh
   - name: Start preview server
     actions:
       - type: exec
@@ -70,21 +60,3 @@ commands:
         component: che-docs
         workdir: /projects/che-docs
         command: bash tools/newtopic.sh
-  - name: Validate links
-    actions:
-      - type: exec
-        component: che-docs
-        workdir: /projects/che-docs
-        command: htmltest
-  - name: Validate language changes
-    actions:
-      - type: exec
-        component: che-docs
-        workdir: /projects/che-docs
-        command: sh tools/validate_language_changes.sh
-  - name: Detect unused content
-    actions:
-      - type: exec
-        component: che-docs
-        workdir: /projects/che-docs
-        command: bash tools/detect-unused-content.sh
