fix: Add startingCSV to subscriptions
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/antora.yml
+++ b/antora.yml
@@ -70,6 +70,7 @@ asciidoc:
     pre-migration-prod-package: eclipse-che
     pre-migration-prod-channel: stable
     pre-migration-prod-catalog-source: community-operators
+    pre-migration-prod-starting-csv: eclipse-che.v7.41.2
     prod-checluster: eclipse-che
     prod-cli: chectl
     prod-deployment: che
@@ -93,6 +94,7 @@ asciidoc:
     prod-stable-channel-catalog-source: community-operators
     prod-stable-channel-package: eclipse-che
     prod-stable-channel: stable
+    prod-stable-channel-starting-csv: eclipse-che.v7.49.0
     prod-upstream: Eclipse{nbsp}Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
