chore: main branch replaces the master branch

--- a/publication-builder-antora-playbook.yml
+++ b/publication-builder-antora-playbook.yml
@@ -22,7 +22,7 @@ content:
       branches:
         - "7.48.x"
         - "7.43.x"
-        - master
+        - main
       edit_url: "{web_url}/edit/{refname}/{path}"
 antora:
   extensions:
