--- a/.github/workflows/publish-netlify.yml
+++ b/.github/workflows/publish-netlify.yml
@@ -32,15 +32,10 @@ jobs:
           path: content
 
       - name: Set PR_NUMBER and PR_SHA variables
+        id: vars
         run: |
-          pr_number=$(cat "content/PR_NUMBER")
-          if ! [[ "$pr_number" =~ ^[0-9]+$ ]]; then
-            echo "pr number invalid"
-            exit 1
-          fi
-          echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
-          pr_sha=$(cat "content/PR_SHA")
-          echo "PR_SHA=$pr_sha" >> $GITHUB_ENV
+          echo "::set-output name=pr_number::$(<content/PR_NUMBER)"
+          echo "::set-output name=pr_sha::$(<content/PR_SHA)"
 
       - name: Publish preview netlify
         uses: netlify/actions/cli@master
@@ -51,10 +46,12 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
 
-      - name: Comment the pull-request
-        uses: actions/github-script@v3.0.0
+      - name: Update status comment
+        uses: actions-cool/maintain-one-comment@v1.1.0
         with:
-          script: |
-            const { repo: { owner, repo } } = context;
-            const netlifyUrl = '${{ steps.netlify-publish.outputs.NETLIFY_URL }}';
-            await github.repos.createCommitStatus({ owner, repo, sha: process.env.PR_SHA, state: "success", target_url: netlifyUrl, description: "Browse PR documentation online", context: "browse built doc"})
+          token: ${{ secrets.GITHUB_TOKEN }}
+          body: |
+            🎊 Navigate the preview: https://${{ steps.netlify-publish.outputs.NETLIFY_URL }} 🎊
+            <!-- Sticky Pull Request Comment -->
+          body-include: "<!-- Sticky Pull Request Comment -->"
+          number: ${{ steps.vars.outputs.pr_number }}
