chore: add link to test on development instance

--- a/.github/workflows/try-in-web-ide.yaml
+++ b/.github/workflows/try-in-web-ide.yaml
@@ -11,15 +11,26 @@ name: web-ide
 
 on:
   pull_request_target:
-    types: 
+    types:
       - opened
 
 jobs:
   add-link:
     runs-on: ubuntu-20.04
     steps:
-      - name: Web IDE Pull Request Check
+      - name: Try in Web IDE
         id: try-in-web-ide
         uses: redhat-actions/try-in-web-ide@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          add_comment: true
+          add_status: false
+      - name: Try in Web IDE - development version
+        id: try-in-web-ide-next
+        uses: redhat-actions/try-in-web-ide@main
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          add_comment: true
+          add_status: false
+          web_ide_instance: https://che-dogfooding.apps.che-dev.x6e0.p1.openshiftapps.com
+          comment_badge: https://img.shields.io/badge/Eclipse_Che-Hosted%20by%20Red%20Hat%20(Development)-525C86?logo=eclipse-che&labelColor=red
