chore: update container to avoid error: `Local gulp not found in /projects` chore: use `quay.io/eclipse/che-docs:next` in all workflows

--- a/.github/workflows/build-and-validate-on-push.yaml
+++ b/.github/workflows/build-and-validate-on-push.yaml
@@ -19,7 +19,7 @@ jobs:
   build:
     name: Build and validate
     runs-on: ubuntu-20.04
-    container: "quay.io/eclipse/che-docs:latest"
+    container: "quay.io/eclipse/che-docs:next"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
