--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Docker Build and Push
         run: |
           SHORT_SHA1=$(git rev-parse --short=7 HEAD)
-          docker buildx build --platform linux/amd64 -f Dockerfile --push -t quay.io/eclipse/che-docs:${SHORT_SHA1} -t quay.io/eclipse/che-docs:next .
+          docker buildx build --platform linux/amd64 -f Dockerfile --push -t quay.io/eclipse/che-docs:${SHORT_SHA1} -t quay.io/eclipse/che-docs:next -t quay.io/eclipse/che-docs:next .
