--- a/devfile.yaml
+++ b/devfile.yaml
@@ -6,7 +6,7 @@ metadata:
 components:
   - alias: che-docs
     type: dockerimage
-    image: "quay.io/eclipse/che-docs:latest"
+    image: "quay.io/eclipse/che-docs:next"
     memoryLimit: 512M
     mountSources: true
     command:
