--- a/devfilev2.yaml
+++ b/devfilev2.yaml
@@ -29,7 +29,7 @@ components:
           name: preview-server
           protocol: http
           targetPort: 4000
-      image: "quay.io/eclipse/che-docs:latest"
+      image: "quay.io/eclipse/che-docs:next"
       memoryLimit: 2Gi
       memoryRequest: 256Mi
 commands:
