--- a/.github/workflows/build-and-validate-on-pr.yaml
+++ b/.github/workflows/build-and-validate-on-pr.yaml
@@ -17,7 +17,7 @@ jobs:
   build:
     name: "Build and validate pull request"
     runs-on: ubuntu-20.04
-    container: "quay.io/eclipse/che-docs:latest"
+    container: "quay.io/eclipse/che-docs:next"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
