chore: get_vale_styles compatible with unzip rtaher than busybox unzip

--- a/.vale.ini
+++ b/.vale.ini
@@ -2,7 +2,7 @@
 # See: https://docs.errata.ai/vale/config
 
 # The relative path to the folder containing linting rules (styles).
-StylesPath = .vale/styles
+StylesPath = .github/styles
 
 # Minimum alert level
 # -------------------
