fix: search in development playbook

--- a/antora-playbook-for-development.yml
+++ b/antora-playbook-for-development.yml
@@ -14,6 +14,8 @@ content:
 antora:
   extensions:
     - require: "@antora/lunr-extension"
+      index_latest_only: true
+      snippet_length: 142
 asciidoc:
   sourcemap: true
 output:
