fix: first draft, looks like i need a separate proc module

--- a/antora.yml
+++ b/antora.yml
@@ -80,7 +80,7 @@ asciidoc:
     prod-host: che-host
     prod-id-short: che
     prod-id: eclipse-che
-    prod-last-version-pre-dwo: v7.41
+    prod-last-version-pre-dwo: 7.41
     prod-namespace: eclipse-che
     prod-operator-bundle-name: eclipse-che
     prod-operator-image-name: che-operator
@@ -98,8 +98,8 @@ asciidoc:
     prod-upstream: Eclipse{nbsp}Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
-    prod-ver-patch: "7.47.0"
-    prod-ver: "7.47"
+    prod-ver-patch: "7.50.0"
+    prod-ver: "7.50"
     prod-workspace: che-ws
     prod: Eclipse&#160;Che
     prod2: Eclipse&#160;Che
