docs: backporting PR 2391

--- a/antora.yml
+++ b/antora.yml
@@ -79,7 +79,7 @@ asciidoc:
     prod-host: che-host
     prod-id-short: che
     prod-id: eclipse-che
-    prod-last-version-pre-dwo: v7.41
+    prod-last-version-pre-dwo: 7.41
     prod-namespace: eclipse-che
     prod-operator-bundle-name: eclipse-che
     prod-operator-image-name: che-operator
