chore: use Antora extensions to orchestrate the build and unify the displayed output.
* Updating Antora to 3.0.2 to fix erroneous warnings.
* Updating Vale to 2.20.0.
* Adding `asciidoctor-emoji` and `asciidoctor-kroki`.
* Using Antora rather than Gulp to run and display output of these scripts:
** Prerequisites scripts:
*** `tools/environment_docs_gen.sh`
*** `tools/get_vale_styles.sh`
** Validators scripts:
*** `htmltest`
*** `tools/antora-to-plain-asciidoc.sh`
*** `tools/detect-unused-content.sh`
*** `tools/validate_language_changes.sh`
* Unchanged:
** Gulp serves files, rebuilds on change and live reload.
** Preview script runs `tools/checluster_docs_gen.sh`
* Fix scripts for a minimalistic output.
* Remove obsolete and broken scripts.

--- a/antora-playbook-for-development.yml
+++ b/antora-playbook-for-development.yml
@@ -13,16 +13,22 @@ content:
       edit_url: "https://github.com/eclipse-che/che-docs/edit/main/{path}"
 antora:
   extensions:
-    - require: "@antora/lunr-extension"
+    - id: search
+      require: "@antora/lunr-extension"
       index_latest_only: true
+      languages: [en]
       snippet_length: 142
+    - id: single-sourcing
+      require: ./extensions/single-sourcing.js
+    - id: unlisted-pages
+      require: ./extensions/unlisted-pages.js
+    - id: validators
+      require: ./extensions/validators.js
 asciidoc:
   sourcemap: true
 output:
-  destinations:
-    - provider: fs
-      clean: true
-      path: build/site
+  clean: true
+  dir: build/site
 ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
@@ -39,4 +45,5 @@ runtime:
   cache_dir: ./.cache/antora
   log:
     failure_level: warn
+    format: pretty
     level: info
