chore: use vale sync
* Define Packages in vale configuration. See https://vale.sh/docs/topics/packages/
* Use `vale sync` to get a fresh copy of the styles. See https://vale.sh/docs/vale-cli/structure/
* Remove obsolete `get_vale_styles.sh` script.
* Adapt GitHub workflows.

--- a/.github/workflows/build-and-validate-on-pr.yaml
+++ b/.github/workflows/build-and-validate-on-pr.yaml
@@ -71,9 +71,7 @@ jobs:
         run: tools/detect-unused-content.sh
 
       - name: Validate language on files added or modified
-        run: |
-          tools/get_vale_styles.sh
-          tools/validate_language_changes.sh
+        run: tools/validate_language_changes.sh
 
       - name: Validate conversion to plain asciidoc
         run: tools/antora-to-plain-asciidoc.sh
