--- a/.vale.ini
+++ b/.vale.ini
@@ -4,6 +4,10 @@
 # The relative path to the folder containing linting rules (styles).
 StylesPath = .vale/styles
 
+# Packages to download with `vale sync`. See https://vale.sh/docs/topics/packages/
+Packages = https://github.com/redhat-documentation/vale-at-red-hat/releases/latest/download/RedHat.zip, \
+    https://github.com/eclipse-che/che-docs-vale-style/releases/latest/download/CheDocs.zip
+
 # Minimum alert level
 # -------------------
 # The minimum alert level in the output (suggestion, warning, or error).
@@ -54,4 +58,3 @@ RedHat.ConfigMap  = NO
 RedHat.Slash = NO
 RedHat.Spacing = NO
 RedHat.Spelling = NO
-
