--- a/.github/workflows/build-and-validate-on-push.yaml
+++ b/.github/workflows/build-and-validate-on-push.yaml
@@ -64,6 +64,4 @@ jobs:
         run: tools/detect-unused-content.sh
 
       - name: Count Vale alerts
-        run: |
-          tools/get_vale_styles.sh
-          tools/count_vale_errors.sh
+        run: tools/count_vale_errors.sh
