--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ build/site.zip
 build/site-unbranded
 
 # Keep Vale styles external
-.vale/styles/
+.vale/styles/CheDocs
+.vale/styles/RedHat
 
 linkchecker-out.html
 .ash_history
