Remove a weird blank char in gitlab URL
Signed-off-by: Mario Loriedo <mario.loriedo@gmail.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
       "redhat.vscode-yaml",
       "redhat.vscode-xml",
       "timonwong.shellcheck",
-      "errata-ai.vale-server"
+      "errata-ai.vale-server",
+      "asciidoctor.asciidoctor-vscode"
     ]
 }
