--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,8 @@ build/site.zip
 build/site-unbranded
 
 # Keep Vale styles external
-.vale/styles/CheDocs
-.vale/styles/RedHat
+.vale/styles/CheDocs*
+.vale/styles/RedHat*
 
 linkchecker-out.html
 .ash_history
