--- a/.gitignore
+++ b/.gitignore
@@ -25,14 +25,11 @@ vendor
 # Antora
 .cache
 node_modules/
-build/plain-asciidoc
-build/site
-build/site.zip
-build/site-unbranded
+build
 
 # Keep Vale styles external
-.vale/styles/CheDocs
-.vale/styles/RedHat
+.vale/styles/CheDocs*
+.vale/styles/RedHat*
 
 linkchecker-out.html
 .ash_history
