--- a/.gitignore
+++ b/.gitignore
@@ -25,13 +25,12 @@ vendor
 # Antora
 .cache
 node_modules/
-build/plain-asciidoc
-build/site
-build/site.zip
-build/site-unbranded
+build
 
 # Keep Vale styles external
-.vale/styles/
+.vale/styles/CheDocs*
+.vale/styles/RedHat*
+
 
 linkchecker-out.html
 .ash_history
