--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,13 @@ vendor
 # Antora
 .cache
 node_modules/
-build
+build/plain-asciidoc
+build/site
+build/site.zip
+build/site-unbranded
 
 # Keep Vale styles external
-.vale/styles/CheDocs*
-.vale/styles/RedHat*
-
+.vale/styles/
 
 linkchecker-out.html
 .ash_history
