Revert "fix: DWO version update in antora.yml (#2421)"
This reverts commit 51e8461c6d2a366657c7b338ee3e8b08b554e713.

--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,14 @@ vendor
 # Antora
 .cache
 node_modules/
-build
+build/plain-asciidoc
+build/site
+build/site.zip
+build/site-unbranded
 
 # Keep Vale styles external
-.vale/styles/CheDocs*
-.vale/styles/RedHat*
+.vale/styles/CheDocs
+.vale/styles/RedHat
 
 linkchecker-out.html
 .ash_history
