--- a/.vale.ini
+++ b/.vale.ini
@@ -4,6 +4,9 @@
 # The relative path to the folder containing linting rules (styles).
 StylesPath = .vale/styles
 
+# Packages to download with `vale sync`. See https://vale.sh/docs/topics/packages/
+Packages = RedHat.zip, https://github.com/eclipse-che/che-docs-vale-style/releases/latest/download/CheDocs.zip
+
 # Minimum alert level
 # -------------------
 # The minimum alert level in the output (suggestion, warning, or error).
@@ -54,4 +57,3 @@ RedHat.ConfigMap  = NO
 RedHat.Slash = NO
 RedHat.Spacing = NO
 RedHat.Spelling = NO
-
