fix: rename identity provider attributes for the migration procedure

--- a/antora.yml
+++ b/antora.yml
@@ -27,6 +27,8 @@ asciidoc:
     hosted-che-docs: xref:hosted-che:hosted-che.adoc[]
     identity-provider-id: keycloak
     identity-provider: Keycloak
+    identity-provider-legacy-id: keycloak
+    identity-provider-legacy: Keycloak
     image-puller-cr-name: KubernetesImagePuller
     image-puller-deployment-id: kubernetes-image-puller-operator
     image-puller-deployment-name: kubernetes-image-puller
