--- a/publication-builder-antora-playbook.yml
+++ b/publication-builder-antora-playbook.yml
@@ -21,7 +21,7 @@ content:
     - url: https://github.com/eclipse/che-docs
       branches:
         - "7.53.x"
-        - "7.43.x"
+        - "che-7-redirections"
         - main
       edit_url: "{web_url}/edit/{refname}/{path}"
 antora:
