chore: update container * Update: Antora 3.1 * Update: Vale 2.20.2, use vale DNF package * Add Antora extensions: Assembler, Collector, PDF * Use `npm` rather than `yarn`, that appears to be removed from `ubi8/nodejs16` * Add a script to build locally * Add a GitHub workflow to test container creation on pull request * Fix build errors and warnings

--- a/antora.yml
+++ b/antora.yml
@@ -95,7 +95,7 @@ asciidoc:
     prod-stable-channel-package: eclipse-che
     prod-stable-channel: stable
     prod-stable-channel-starting-csv: eclipse-che.v7.49.0
-    prod-upstream: Eclipse{nbsp}Che
+    prod-upstream: Eclipse&#160Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
     prod-ver-patch: "7.50.0"
