--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,7 @@ vendor
 # Antora
 .cache
 node_modules/
-build/plain-asciidoc
-build/site
-build/site.zip
-build/site-unbranded
+build/
 
 # Keep Vale styles external
 .vale/styles/CheDocs*
