chore: get ready to use Antora Collector for publication

--- a/publication-builder-antora-playbook.yml
+++ b/publication-builder-antora-playbook.yml
@@ -20,15 +20,18 @@ content:
   sources:
     - url: https://github.com/eclipse/che-docs
       branches:
-        - "7.53.x"
-        - "che-7-redirections"
+        - che-7-redirections
+        - 7.53.x
         - main
       edit_url: "{web_url}/edit/{refname}/{path}"
 antora:
   extensions:
-    - require: "@antora/lunr-extension"
+    - id: search
+      require: '@antora/lunr-extension'
       index_latest_only: true
       snippet_length: 142
+    - id: collector
+      require: '@antora/collector-extension'
 asciidoc:
   sourcemap: true
 output:
