--- a/.github/workflows/publication-builder.yaml
+++ b/.github/workflows/publication-builder.yaml
@@ -26,7 +26,7 @@ jobs:
   build:
     name: Publication builder
     runs-on: ubuntu-20.04
-    container: "quay.io/eclipse/che-docs:latest"
+    container: "quay.io/eclipse/che-docs:next"
     steps:
       - name: Checkout publication-builder branch
         uses: actions/checkout@v2
