chore: Backport migration and rollback scripts (#2459)
Co-authored-by: Max Leonov <mleonov@redhat.com>
Co-authored-by: Fabrice Flore-Thébault <ffloreth@redhat.com>

--- a/antora.yml
+++ b/antora.yml
@@ -27,6 +27,8 @@ asciidoc:
     hosted-che-docs: xref:hosted-che:hosted-che.adoc[]
     identity-provider-id: keycloak
     identity-provider: Keycloak
+    identity-provider-legacy-id: keycloak
+    identity-provider-legacy: Keycloak
     image-puller-cr-name: KubernetesImagePuller
     image-puller-deployment-id: kubernetes-image-puller-operator
     image-puller-deployment-name: kubernetes-image-puller
@@ -95,7 +97,7 @@ asciidoc:
     prod-stable-channel-package: eclipse-che
     prod-stable-channel: stable
     prod-stable-channel-starting-csv: eclipse-che.v7.49.0
-    prod-upstream: Eclipse{nbsp}Che
+    prod-upstream: Eclipse&#160;Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
     prod-ver-patch: "7.46.0"
