fix: add isDefault to the start-preview-server task (#2464)
* fix: add isDefault to the start-preview-server task, remove obsolete stuff.

* fix: remove obsolete newtopic command

* fix: remove the unmaintained newtopic script

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -37,13 +37,7 @@ commands:
       commandLine: sh tools/preview.sh
       component: tools
       group:
+        isDefault: true
         kind: build
-      label: Start preview server
       workingDir: "${PROJECT_SOURCE}"
     id: start-preview-server
-  - exec:
-      commandLine: bash tools/newtopic.sh
-      component: tools
-      label: Create a new topic
-      workingDir: "${PROJECT_SOURCE}"
-    id: create-a-new-topic
