chore: new repository URL

--- a/publication-builder-antora-playbook.yml
+++ b/publication-builder-antora-playbook.yml
@@ -18,7 +18,7 @@ site:
     google_analytics: "UA-37306001-2"
 content:
   sources:
-    - url: https://github.com/eclipse/che-docs
+    - url: https://github.com/eclipse-che/che-docs
       branches:
         - che-7-redirections
         - 7.56.x
