--- a/.github/workflows/build-and-validate-on-pr.yaml
+++ b/.github/workflows/build-and-validate-on-pr.yaml
@@ -20,7 +20,7 @@ jobs:
     container: "quay.io/eclipse/che-docs:next"
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Necessary for git diff in vale step
 
@@ -33,17 +33,16 @@ jobs:
       # See: http://man7.org/linux/man-pages/man1/date.1.html
       - name: Get Date
         id: get-date
-        run: |
-          echo "::set-output name=yearweek::$(/bin/date -u "+%Y%U")"
+        run: echo "YEAR_WEEK=$(/bin/date -u +%Y%U)" >> $GITHUB_OUTPUT
         shell: bash
 
       - name: Restore cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         env:
           cache-name: cache
         with:
           path: .cache
-          key: ${{ steps.get-date.outputs.yearweek }}
+          key: ${{ steps.get-date.outputs.YEAR_WEEK }}
 
       - name: Build using antora # and fail on warning
         id: antora-build
@@ -55,7 +54,7 @@ jobs:
           echo "${{ github.event.pull_request.head.sha }}" > PR_SHA
 
       - name: Upload artifact doc-content
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: doc-content
           path: |
