--- a/antora.yml
+++ b/antora.yml
@@ -23,6 +23,7 @@ asciidoc:
     devworkspace-operator-index: registry.redhat.io/redhat/redhat-operator-index:v4.10
     devworkspace-operator-version-patch: "0.15.2"
     devworkspace: Dev Workspace
+    devworkspace-id: devworkspace
     docker-cli: docker
     hosted-che-docs: xref:hosted-che:hosted-che.adoc[]
     identity-provider-legacy-id: keycloak
