Update GitHub actions to use Node 16 and Ubuntu to latest
Signed-off-by: sdawley <sdawley@redhat.com>

--- a/.github/workflows/build-and-validate-on-pr.yaml
+++ b/.github/workflows/build-and-validate-on-pr.yaml
@@ -16,7 +16,7 @@ on:
 jobs:
   build:
     name: "Build and validate pull request"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     container: "quay.io/eclipse/che-docs:next"
     steps:
       - name: Checkout code
