--- a/.github/workflows/build-and-validate-on-pr.yaml
+++ b/.github/workflows/build-and-validate-on-pr.yaml
@@ -16,7 +16,7 @@ on:
 jobs:
   build:
     name: "Build and validate pull request"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     container: "quay.io/eclipse/che-docs:next"
     steps:
       - name: Checkout code
