--- a/.github/workflows/publish-netlify.yml
+++ b/.github/workflows/publish-netlify.yml
@@ -22,10 +22,10 @@ on:
 jobs:
   publish:
     name: Publish preview on netlify
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Download doc-content artifact
-        uses: dawidd6/action-download-artifact@v2.18.0
+        uses: dawidd6/action-download-artifact@v2
         with:
           workflow: ${{ github.event.workflow_run.workflow_id }}
           name: doc-content
