--- a/.github/workflows/build-and-validate-on-push.yaml
+++ b/.github/workflows/build-and-validate-on-push.yaml
@@ -18,7 +18,7 @@ on:
 jobs:
   build:
     name: Build and validate
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     container: "quay.io/eclipse/che-docs:next"
     steps:
       - name: Checkout code
