chore: set prerelease to false in antora.yml

--- a/antora.yml
+++ b/antora.yml
@@ -2,7 +2,7 @@
 name: docs
 title: Documentation
 version: next
-prerelease: true
+prerelease: false
 start_page: overview:introduction-to-eclipse-che.adoc
 nav:
   - modules/overview/nav.adoc
