--- a/antora.yml
+++ b/antora.yml
@@ -1,8 +1,8 @@
 ---
 name: docs
 title: Documentation
-version: next
-prerelease: true
+version: stable
+prerelease: false
 start_page: overview:introduction-to-eclipse-che.adoc
 nav:
   - modules/overview/nav.adoc
