--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Global Owners
-* @rkratky @themr0c @max-cx @eclipse-che/ecd-che-docs-reviewers
+* @rkratky @max-cx @eclipse-che/ecd-che-docs-reviewers
