--- a/antora.yml
+++ b/antora.yml
@@ -20,8 +20,8 @@ asciidoc:
     icons: font
     # for the project
     che-plugin-registry-directory: che-plugin-registry
-    devworkspace-operator-index: registry.redhat.io/redhat/redhat-operator-index:v4.10
-    devworkspace-operator-version-patch: "0.17.0"
+    devworkspace-operator-index: quay.io/devfile/devworkspace-operator-index:release
+    devworkspace-operator-version-patch: "0.18.1"
     devworkspace: Dev Workspace
     devworkspace-id: devworkspace
     docker-cli: docker
