--- a/antora.yml
+++ b/antora.yml
@@ -1,7 +1,7 @@
 ---
 name: docs
 title: Documentation
-version: stable
+version: 7.58.x
 prerelease: false
 start_page: overview:introduction-to-eclipse-che.adoc
 nav:
@@ -21,7 +21,7 @@ asciidoc:
     # for the project
     che-plugin-registry-directory: che-plugin-registry
     devworkspace-operator-index: registry.redhat.io/redhat/redhat-operator-index:v4.10
-    devworkspace-operator-version-patch: "0.15.2"
+    devworkspace-operator-version-patch: "0.18.1"
     devworkspace: Dev Workspace
     devworkspace-id: devworkspace
     docker-cli: docker
