--- a/antora.yml
+++ b/antora.yml
@@ -1,8 +1,8 @@
 ---
 name: docs
 title: Documentation
-version: next
-prerelease: true
+version: 7.61.x
+prerelease: false
 start_page: overview:introduction-to-eclipse-che.adoc
 nav:
   - modules/overview/nav.adoc
@@ -21,7 +21,7 @@ asciidoc:
     # for the project
     che-plugin-registry-directory: che-plugin-registry
     devworkspace-operator-index: registry.redhat.io/redhat/redhat-operator-index:v4.10
-    devworkspace-operator-version-patch: "0.18.1"
+    devworkspace-operator-version-patch: "0.19.0"
     devworkspace: Dev Workspace
     devworkspace-id: devworkspace
     docker-cli: docker
@@ -98,8 +98,8 @@ asciidoc:
     prod-upstream: Eclipse&#160;Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
-    prod-ver-patch: "7.58.0"
-    prod-ver: "7.58"
+    prod-ver-patch: "7.61.0"
+    prod-ver: "7.61"
     prod-workspace: che-ws
     prod: Eclipse&#160;Che
     prod2: Eclipse&#160;Che
