chore: RHDEVDOCS-5317 update to OCP 4.12 as the recommended version and make sure all links have 'link:' prefix so they render correctly
Signed-off-by: Nick Boldt <nboldt@redhat.com>

--- a/antora.yml
+++ b/antora.yml
@@ -18,10 +18,14 @@ asciidoc:
     experimental: ""
     favicon: favicon.png
     icons: font
+    ocp: OpenShift&#160;Container&#160;Platform
+    # recommended OCP version for new deployments
+    # included in links to OCP docs and in catalog source links: do not include the "v" prefix here
+    ocp4-ver: "4.12"
     # for the project
     che-plugin-registry-directory: che-plugin-registry
-    devworkspace-operator-index: registry.redhat.io/redhat/redhat-operator-index:v4.10
-    devworkspace-operator-version-patch: "0.19.1"
+    devworkspace-operator-index: registry.redhat.io/redhat/redhat-operator-index:v{ocp4-ver}
+    devworkspace-operator-version-patch: "0.20.0"
     devworkspace: Dev Workspace
     devworkspace-id: devworkspace
     docker-cli: docker
@@ -50,8 +54,6 @@ asciidoc:
     link-prod-cli-documentation: "link:https://github.com/che-incubator/chectl/[`chectl` reference documentation]"
     link-understanding-custom-resources: "link:https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/[Kubernetes - Understanding Custom Resources]"
     namespace: namespace # In context: API namespace
-    ocp: OpenShift&#160;Container&#160;Platform
-    ocp4-ver: "4.10"
     orch-cli-link: link:https://kubernetes.io/docs/reference/kubectl/overview/[Overview of kubectl]
     orch-cli: kubectl
     orch-ingress: Kubernetes Ingress
@@ -84,7 +86,7 @@ asciidoc:
     prod-namespace: eclipse-che
     prod-operator-bundle-name: eclipse-che
     prod-operator-image-name: che-operator
-    prod-operator-index: registry.access.redhat.com/redhat/community-operator-index:v4.10
+    prod-operator-index: registry.access.redhat.com/redhat/community-operator-index:v{ocp4-ver}
     prod-operator-package-name: eclipse-che
     prod-operator: che-operator
     prod-prev-short: Che
