fix: Installing Eclipse Che in disconnected cluster
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/antora.yml
+++ b/antora.yml
@@ -24,7 +24,7 @@ asciidoc:
     ocp4-ver: "4.12"
     # for the project
     che-plugin-registry-directory: che-plugin-registry
-    devworkspace-operator-index: registry.redhat.io/redhat/redhat-operator-index:v{ocp4-ver}
+    devworkspace-operator-index: quay.io/devfile/devworkspace-operator-index:release
     devworkspace-operator-version-patch: "0.20.0"
     devworkspace: Dev Workspace
     devworkspace-id: devworkspace
