fix: Installing Eclipse Che in disconnected cluster (#2621)
* fix: Installing Eclipse Che in disconnected cluster

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/antora.yml
+++ b/antora.yml
@@ -24,8 +24,8 @@ asciidoc:
     ocp4-ver: "4.12"
     # for the project
     che-plugin-registry-directory: che-plugin-registry
-    devworkspace-operator-index: registry.redhat.io/redhat/redhat-operator-index:v{ocp4-ver}
-    devworkspace-operator-version-patch: "0.20.0"
+    devworkspace-operator-index-disconnected-install: quay.io/devfile/devworkspace-operator-index:release-digest
+    devworkspace-operator-version-patch: "0.21.1"
     devworkspace: Dev Workspace
     devworkspace-id: devworkspace
     docker-cli: docker
@@ -100,8 +100,8 @@ asciidoc:
     prod-upstream: Eclipse&#160;Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
-    prod-ver-patch: "7.67.0"
-    prod-ver: "7.67"
+    prod-ver-patch: "7.71.0"
+    prod-ver: "7.71"
     prod-workspace: che-ws
     prod: Eclipse&#160;Che
     prod2: Eclipse&#160;Che
