--- a/antora.yml
+++ b/antora.yml
@@ -1,7 +1,7 @@
 ---
 name: docs
 title: Documentation
-version: next
+version: 7.70.x
 prerelease: false
 start_page: overview:introduction-to-eclipse-che.adoc
 nav:
