--- a/antora.yml
+++ b/antora.yml
@@ -2,7 +2,7 @@
 name: docs
 title: Documentation
 version: next
-prerelease: true
+prerelease: false
 start_page: overview:introduction-to-eclipse-che.adoc
 nav:
   - modules/overview/nav.adoc
@@ -100,8 +100,8 @@ asciidoc:
     prod-upstream: Eclipse&#160;Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
-    prod-ver-patch: "7.74.0"
-    prod-ver: "7.74"
+    prod-ver-patch: "7.75.0"
+    prod-ver: "7.75"
     prod-workspace: che-ws
     prod: Eclipse&#160;Che
     prod2: Eclipse&#160;Che
