--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Global Owners
-* @rkratky @max-cx @deerskindoll @eclipse-che/ecd-che-docs-reviewers
+* @deerskindoll @eclipse-che/ecd-che-docs-reviewers
