--- a/publication-builder-antora-playbook.yml
+++ b/publication-builder-antora-playbook.yml
@@ -57,3 +57,7 @@ runtime:
   log:
     failure_level: warn
     level: info
+   - name: "Call website publication builder"
+     uses: eclipse/che-website/.github/workflows/publication-builder.yaml@main
+     secrets:
+       CHE_BOT_GITHUB_TOKEN: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
