--- a/.github/workflows/publication-builder.yaml
+++ b/.github/workflows/publication-builder.yaml
@@ -65,3 +65,8 @@ jobs:
           github_token: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
           publish_branch: publication
           publish_dir: build/site
+
+      - name: "Call website publication builder"
+        uses: eclipse/che-website/.github/workflows/publication-builder.yaml@main
+        secrets:
+        CHE_BOT_GITHUB_TOKEN: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
