Vale errors fix

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,5 +1,5 @@
 # Vale configuration file for `che-docs` repository.
-# See: https://docs.errata.ai/vale/config
+# See: https://vale.sh/docs/topics/config/
 
 # The relative path to the folder containing linting rules (styles).
 StylesPath = .vale/styles
@@ -16,7 +16,7 @@ Packages = https://github.com/redhat-documentation/vale-at-red-hat/releases/late
 MinAlertLevel = warning
 
 # IgnoredScopes specifies inline-level HTML tags to ignore.
-# These tags may occur in an active scope (unlike SkippedScopes, skipped entirely) but their content still will not raise any alerts.
+# These tags can occur in an active scope (unlike SkippedScopes, skipped entirely) but their content still will not raise any alerts.
 # Default: ignore `code` and `tt`.
 IgnoredScopes = code, tt, img, url, a, body.id
 # SkippedScopes specifies block-level HTML tags to ignore. Ignore any content in these scopes.
@@ -24,7 +24,7 @@ IgnoredScopes = code, tt, img, url, a, body.id
 # For AsciiDoc: by default, listingblock, and literalblock.
 SkippedScopes = script, style, pre, figure, code, tt, blockquote, listingblock, literalblock
 
-# Rules for matching file types. See: https://docs.errata.ai/vale/scoping
+# Rules for matching file types. See: https://vale.sh/docs/topics/scoping/
 [[!.]*.adoc]
 
 # Styles to load, located in the `StylesPath` folder:
