--- a/.github/workflows/publication-builder.yaml
+++ b/.github/workflows/publication-builder.yaml
@@ -66,5 +66,8 @@ jobs:
           publish_branch: publication
           publish_dir: build/site
 
-      - name: "Call website publication builder"
-        uses: eclipse/che-website/.github/workflows/publication-builder.yaml@main
+  jobs:
+      name: Call website publication builder
+      uses: eclipse/che-website/.github/workflows/publication-builder.yaml@main
+      secrets:
+        CHE_BOT_GITHUB_TOKEN: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
