--- a/.github/workflows/publication-builder.yaml
+++ b/.github/workflows/publication-builder.yaml
@@ -68,6 +68,6 @@ jobs:
 
   jobs:
       name: Call website publication builder
-      uses: eclipse/che-website/.github/workflows/publication-builder.yaml@main
+      uses: eclipse-che/che-website/.github/workflows/publication-builder.yaml@main
       secrets:
         CHE_BOT_GITHUB_TOKEN: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
