change action error level

--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Vale Linter
         uses: errata-ai/vale-action@reviewdog
         with:
+          vale_flags: "--minAlertLevel=error"
           fail_on_error: true
         env:
           # Required, set by GitHub actions automatically:
