chore: Update devfile.yaml

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -6,7 +6,7 @@
 #
 # SPDX-License-Identifier: EPL-2.0
 #
-schemaVersion: 2.1.0
+schemaVersion: 2.2.2
 metadata:
   name: che-docs
 attributes:
@@ -21,13 +21,13 @@ components:
       endpoints:
         - exposure: public
           name: livereload
-          protocol: http
+          protocol: https
           targetPort: 35729
         - attributes:
             path: /
           exposure: public
           name: preview-server
-          protocol: http
+          protocol: https
           targetPort: 4000
       image: "quay.io/eclipse/che-docs:next"
       env:
