chore: fix DWO missing version in antora.yaml
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/antora.yml
+++ b/antora.yml
@@ -25,7 +25,7 @@ asciidoc:
     # for the project
     che-plugin-registry-directory: che-plugin-registry
     devworkspace-operator-index-disconnected-install: quay.io/devfile/devworkspace-operator-index:release-digest
-    devworkspace-operator-version-patch: ""
+    devworkspace-operator-version-patch: "0.26.0"
     devworkspace: DevWorkspace
     devworkspace-id: devworkspace
     docker-cli: docker
