Update path in call-publication-builder.yaml

--- a/.github/workflows/call-publication-builder.yaml
+++ b/.github/workflows/call-publication-builder.yaml
@@ -18,6 +18,6 @@ on:
 jobs:
   call-publication-builder:
     name: "Call publication builder"
-    uses: eclipse/che-docs/.github/workflows/publication-builder.yaml@publication-builder
+    uses: eclipse-che/che-docs/.github/workflows/publication-builder.yaml@publication-builder
     secrets:
       CHE_BOT_GITHUB_TOKEN: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
