--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,20 +28,20 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Check existing tags
-        run: |
-          set +e
-          RECREATE_TAGS=${{ github.event.inputs.forceRecreateTags }}
-          git ls-remote --exit-code origin refs/tags/${{ github.event.inputs.version}}
-          TAG_EXISTS=$?
-          if [[ $TAG_EXISTS -eq 0 ]]; then
-            if [[ $RECREATE_TAGS == "true" ]]; then
-              echo "[INFO] Recreating tags for ${{ github.event.inputs.version}} version"
-              git push origin :${{ github.event.inputs.version}}
-            else
-              echo "[ERROR] Cannot proceed with release - tag already exists"
-            fi
-          fi
+      # - name: Check existing tags
+      #   run: |
+      #     set +e
+      #     RECREATE_TAGS=${{ github.event.inputs.forceRecreateTags }}
+      #     git ls-remote --exit-code origin refs/tags/${{ github.event.inputs.version}}
+      #     TAG_EXISTS=$?
+      #     if [[ $TAG_EXISTS -eq 0 ]]; then
+      #       if [[ $RECREATE_TAGS == "true" ]]; then
+      #         echo "[INFO] Recreating tags for ${{ github.event.inputs.version}} version"
+      #         git push origin :${{ github.event.inputs.version}}
+      #       else
+      #         echo "[ERROR] Cannot proceed with release - tag already exists"
+      #       fi
+      #     fi
       - name: Set up yq
         run: |
           python -m pip install --upgrade pip
