chore: Adding ChrisChinchilla.vale-vscode

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
       "redhat.vscode-xml",
       "timonwong.shellcheck",
       "errata-ai.vale-server",
-      "asciidoctor.asciidoctor-vscode"
+      "asciidoctor.asciidoctor-vscode",
+      "ChrisChinchilla.vale-vscode"
     ]
 }
