set up fork repository
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/.github/workflows/build-and-validate-on-push.yaml
+++ b/.github/workflows/build-and-validate-on-push.yaml
@@ -19,7 +19,7 @@ jobs:
   build:
     name: Build and validate
     runs-on: ubuntu-22.04
-    container: "quay.io/eclipse/che-docs:next"
+    container: "quay.io/mkuznets/che-docs:next"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
