chore: adding  "github.vscode-pull-request-github" and "sugatoray.vscode-git-extension-pack" extentions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,8 @@
       "redhat.vscode-xml",
       "timonwong.shellcheck",
       "asciidoctor.asciidoctor-vscode",
+      "github.vscode-pull-request-github",
+      "sugatoray.vscode-git-extension-pack",
       "ChrisChinchilla.vale-vscode"
     ]
 }
