add document for che installation on eks

--- a/antora.yml
+++ b/antora.yml
@@ -29,6 +29,7 @@ asciidoc:
     devworkspace: DevWorkspace
     devworkspace-id: devworkspace
     docker-cli: docker
+    eks: AWS EKS
     hosted-che-docs: xref:hosted-che:hosted-che.adoc[]
     identity-provider-legacy-id: keycloak
     identity-provider-legacy: Keycloak
