advanced config properties

--- a/antora.yml
+++ b/antora.yml
@@ -122,12 +122,12 @@ ext:
       base: modules/administration-guide/examples/checluster-properties
       dir: build/collector/checluster-properties
       files: checluster-properties.adoc
-#   - run:
-#       command: ./tools/environment_docs_gen.sh
-#     scan:
-#       base: modules/administration-guide/examples/che-server-properties
-#       dir: build/collector/che-server-properties
-#       files: system-variables.adoc
+  - run:
+      command: ./tools/environment_docs_gen.sh
+    scan:
+       base: modules/administration-guide/examples/che-server-properties
+       dir: build/collector/che-server-properties
+       files: system-variables.adoc
   - run:
       command: ./tools/create_architecture_diagrams.py
     scan:
