fix: fix missing version in workflow reference
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/.github/workflows/publication-builder.yaml
+++ b/.github/workflows/publication-builder.yaml
@@ -68,6 +68,6 @@ jobs:
   call-che-website-publish:
     name: "Call website publication update"
     needs: build
-    uses: eclipse-che/che-website-publish/blob/main/.github/workflows/publish.yaml
+    uses: eclipse-che/che-website-publish/blob/main/.github/workflows/publish.yaml@main
     secrets:
       CHE_BOT_GITHUB_TOKEN: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
