Update CODEOWNERS for che-docs repository

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Global Owners
-* @deerskindoll @eclipse-che/ecd-che-docs-reviewers
+* @mkuznyetsov @gtrivedi88 @eclipse-che/ecd-che-docs-reviewers
